--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,10 @@
       "dom.iterable",
       "esnext"
     ],
+    "typeRoots": [
+      "./node_modules/@types",
+      "./types"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
